@@ -25,7 +25,7 @@ foreach my $location ('/apreq_request_test', '/apreq_access_test') {
 
 ok t_cmp(403, GET_RC("/apreq_access_test"), "access denied");
 
-my $filler = "0123456789";# x 6400; # < 64K
+my $filler = "0123456789" x 6400; # < 64K
 my $body = POST_BODY("/apreq_access_test?foo=1;", 
                      content => "bar=2&quux=$filler;test=6&more=$filler");
 ok t_cmp(<<EOT, $body, "prefetch credentials");
