@@ -3,6 +3,9 @@
 
 @section v2_04_dev Changes with libapreq2-2.04-dev
 
+- C API [joes]
+  Add MaxBody, MaxBrigade, and TempDir per-dir directives to mod_apreq 
+  filter.
 
 - C API [joes]
   Replace free/tempnam dependency in apreq_file_mktemp() with
